# IsenCoin

./: CMakeLists.txt  LICENSE  README.md  config.vili
extlibs/base58/: CMakeLists.txt
extlibs/base58/include/base58/: base58.hpp
extlibs/base58/src/: base58.cpp
extlibs/base_x/: CMakeLists.txt
extlibs/cryptopp/: CMakeLists.txt
extlibs/ed25519/: CMakeLists.txt
extlibs/ed25519/include/ed25519/: sha512.h
extlibs/imgui/src/: imgui-SFML.cpp
extlibs/msgpack11/: CMakeLists.txt
extlibs/msgpack11/include/msgpack11/: msgpack11.hpp
extlibs/msgpack11/src/: msgpack11.cpp
extlibs/tacopie/: CMakeLists.txt
extlibs/vili/: CMakeLists.txt
extlibs/vili/include/vili/: ArrayNode.hpp  ComplexNode.hpp  ContainerNode.hpp  DataNode.hpp  LinkNode.hpp  Node.hpp  Types.hpp  Vili.hpp
extlibs/vili/src/: ArrayNode.cpp  ComplexNode.cpp  ContainerNode.cpp  DataNode.cpp  ErrorHandler.cpp  Functions.cpp  LinkNode.cpp  Node.cpp  NodeIterator.cpp  NodeTemplate.cpp  NodeValidator.inl  Types.cpp  ViliParser.cpp
include/: Block.hpp  Chain.hpp  Config.hpp  Exceptions.hpp  Functions.hpp  ImguiTxViewer.hpp  Logger.hpp  Message.hpp  Node.hpp  P2P.hpp  Serialization.pb.hpp  Serialize.hpp  Tracker.hpp  Transaction.hpp  Types.hpp  Ui.hpp  Utils.hpp  Wallet.hpp
src/: Block.cpp  Chain.cpp  Exceptions.cpp  Functions.cpp  Logger.cpp  Node.cpp  P2P.cpp  Serialization.pb.cpp  Serialize.cpp  Tracker.cpp  Transaction.cpp  Ui.cpp  Ui.cpp~RF1ceb4a3.TMP  Ui.cpp~RF2e7207a.TMP  Ui.cpp~RFe710a04.TMP  Ui.cpp~RFe8adfaa.TMP  Ui.cpp~RFea1caba.TMP  Utils.cpp  Wallet.cpp  main.cpp  plol.cpp
src/proto/: Serialization.proto
tools/: client.py  read.py  server.py
